--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,12 @@
 	margin: 0;
 	padding: 0;
 }
-.first {
+.firstPage {
 	height: 700px;
 	background-color: rgb(239, 240, 242);
 }
 
-.second {
+.secondPage {
 	height: 710px;
 	padding: 2%;
 	background-color: rgb(248, 250, 250);
@@ -22,11 +22,11 @@
 	margin: 25px 150px 0 0;
 }
 
-.first_content {
+.firstContent {
 	padding-top: 200px;
 }
 
-.first_text {
+.firstText {
 	text-align: center;
 	font-weight: bold;
 	text-shadow: 4px 4px 13px;
@@ -37,11 +37,11 @@
 	padding: 50px 0 0 0;
 }
 
-.btn_logo {
+.btnLogo {
 	background-color: rgb(239, 240, 242);
 	border: solid 5px black;
 }
-.blue_text {
+.blueText {
 	background-color: rgb(178, 242, 238);
 }
 
@@ -50,23 +50,23 @@
 	padding-right: 25%;
 }
 
-.btn_contacts {
+.btnContacts {
 	background-color: rgb(239, 240, 242);
 	border: solid 1px black;
 }
- .btn_menu {
+ .btnMenu {
  		background-color: rgb(239, 240, 242);
 	border: none;
  }
 
- .second h2 {
+ .secondPage h2 {
  	font-weight: bolder;
  }
- .text_up {
+ .textUp {
  	text-align: center;
  }
 
- .text_up h1{
+ .textUp h1{
  	font-weight: bolder;
  }
 
@@ -74,7 +74,7 @@
  	text-align: center;	
  }		
 
- .content_text {
+ .contentText {
  	background-color: rgb(248, 250, 250);
  	text-align: left;
  	float: center;
@@ -105,12 +105,12 @@ li.action:hover{
 	margin: 5px 0 5px 0;
 }
 
-.img_left{
+.imgLeft{
 	float: right;
 }
-.img_center {
+.imgCenter {
 	float: center;
 }
-.img_right {
+.imgRight {
 	float: left;
 }
